refactor:  refatorando métodos criar e deletar